hphp/hack/test/typecheck/global_const16.php.exp
File "global_const16.php", line 3, characters 16-23:
Invalid expression in constant initializer (Parsing[1002])
