hphp/hack/test/typecheck/global_const16.php
<?hh

const int X = ($x ==> $x);
